<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:entries="@array/misDatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idCuestionario"
        android:layout_width="411dp"
        android:layout_height="647dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySpinner"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="242dp"
            android:layout_height="18dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/titulo_cuestionario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="245dp"
            android:layout_height="17dp"
            android:text="@string/ingrese_nombre_completo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="245dp"
            android:layout_height="17dp"
            android:text="@string/edad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_nombre"
            app:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="245dp"
            android:layout_height="17dp"
            android:text="@string/sexo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_edad"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="230dp"
            android:layout_height="24dp"
            android:text="@string/nivel_oxigenacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.128" />

        <EditText
            android:id="@+id/id_nombre"
            android:layout_width="246dp"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.005" />

        <EditText
            android:id="@+id/id_edad"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.017" />

        <EditText
            android:id="@+id/id_oxigenacion"
            android:layout_width="245dp"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.012" />

        <RadioButton
            android:id="@+id/id_rb_mujer"
            android:layout_width="117dp"
            android:layout_height="31dp"
            android:text="Mujer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.023" />

        <RadioButton
            android:id="@+id/id_rb_hombre"
            android:layout_width="117dp"
            android:layout_height="31dp"
            android:text="Hombre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.292"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.025" />

        <Button
            android:id="@+id/id_btn_validar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_validar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_oxigenacion"
            app:layout_constraintVertical_bias="0.409" />

        <CheckBox
            android:id="@+id/id_cb_dolorCuerpo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dolor_cuerpo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_oxigenacion"
            app:layout_constraintVertical_bias="0.104" />

        <CheckBox
            android:id="@+id/id_cb_fiebre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiebre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.255"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_oxigenacion"
            app:layout_constraintVertical_bias="0.1" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>